--- a/app/src/main/res/layout/movie_board_item.xml
+++ b/app/src/main/res/layout/movie_board_item.xml
@@ -26,17 +26,7 @@
                     android:src="@drawable/civil_war"
                     android:scaleType="centerCrop"
                     android:layout_height="match_parent"/>
-                <RatingBar
-                    android:layout_marginRight="15dp"
-                    android:layout_marginBottom="15dp"
-                    style="?android:attr/ratingBarStyleSmall"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:rating="3.5"
-                    android:layout_alignParentBottom="true"
-                    android:layout_alignParentRight="true"
-                    android:layout_alignParentEnd="true"
-                    android:id="@+id/rating_bar" />
+
             </RelativeLayout>
             <TextView
                 android:id="@+id/tv_name"
@@ -46,6 +36,15 @@
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:text="Captain America Civil War"
+                android:layout_weight=".8"/>
+            <TextView
+                android:id="@+id/key"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:gravity="center"
+                android:textSize="18sp"
+                android:textStyle="bold"
+                android:text=" "
                 android:layout_weight=".8"/>
         </LinearLayout>
     </android.support.v7.widget.CardView>
