--- a/app/src/main/res/layout/movie_fragment.xml
+++ b/app/src/main/res/layout/movie_fragment.xml
@@ -9,52 +9,53 @@
     android:background="?android:attr/colorBackground"
 
     android:padding="5dp"
-    >
+    android:weightSum="1">
 
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/TextLabel">
+
         <android.support.design.widget.TextInputEditText
             android:id="@+id/tiet_movie_name"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter A Movie Name"
-            />
+            android:hint="Agregar Tema" />
     </android.support.design.widget.TextInputLayout>
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
-        <TextView
-            android:id="@+id/tv_rating_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@+id/rating_bar"
-            android:layout_marginTop="15dp"
-            android:text="Your Rating: "
-            android:textSize="16sp"
-            android:textStyle="italic"/>
-        <RatingBar
-            android:id="@+id/rating_bar"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"/>
-    </LinearLayout>
+        android:orientation="horizontal"></LinearLayout>
     <android.support.design.widget.TextInputLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/TextLabel">
+
         <android.support.design.widget.TextInputEditText
+            android:id="@+id/tiet_movie_logo"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:hint="Enter Movie Logo URL "
-            android:id="@+id/tiet_movie_logo"/>
+            android:hint="URL de imagen" />
     </android.support.design.widget.TextInputLayout>
+
+
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/txt_des"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="Descripcion" />
+
+    <android.support.design.widget.TextInputEditText
+        android:id="@+id/txt_hecho"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:hint="ingrese Hecho" />
+
     <Button
         android:id="@+id/b_submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Submit"/>
+        android:text="GRABAR" />
 
 </LinearLayout>
