--- a/app/src/main/res/layout/activity_nuevo.xml
+++ b/app/src/main/res/layout/activity_nuevo.xml
@@ -11,21 +11,42 @@
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TEMA"
+        android:text="TEMA:"
         tools:layout_editor_absoluteX="0dp"
         tools:layout_editor_absoluteY="16dp" />
 
     <EditText
         android:id="@+id/txt_tema"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:inputType="textPersonName" />
-
-    <EditText
-        android:id="@+id/txt_descripcion"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
         android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/textView5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="llave:" />
+
+    <EditText
+        android:id="@+id/txt_llave"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName" />
+
+    <TextView
+        android:id="@+id/lbl_hecho"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Hecho:" />
+
+    <EditText
+        android:id="@+id/txt_hecho_edit"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:ems="10"
+        android:inputType="textPersonName"
+        android:text="Name" />
+
 </LinearLayout>
