--- a/app/src/main/res/layout/movie_board_item.xml
+++ b/app/src/main/res/layout/movie_board_item.xml
@@ -1,54 +1,96 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:card_view="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fondo"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@drawable/descarga"
+    >
+
     <android.support.v7.widget.CardView
-        xmlns:card_view="http://schemas.android.com/apk/res-auto"
         android:id="@+id/card_view"
-        android:layout_gravity="center"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_gravity="center"
         android:layout_margin="5dp"
-        card_view:cardElevation="5dp"
-        card_view:cardCornerRadius="4dp">
+        card_view:cardCornerRadius="4dp"
+        card_view:cardElevation="5dp">
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_weight="0.2">
+
                 <ImageView
                     android:id="@+id/iv_movie_poster"
-                    android:layout_width="match_parent"
-                    android:src="@drawable/civil_war"
+                    android:layout_width="50dp"
+                    android:layout_height="50dp"
                     android:scaleType="centerCrop"
-                    android:layout_height="match_parent"/>
+                    android:src="@drawable/civil_war" />
+
+                <TextView
+                    android:id="@+id/textView4"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_alignParentTop="true"
+                    android:layout_marginStart="12dp"
+                    android:layout_toEndOf="@+id/iv_movie_poster"
+                    android:layout_weight="0.2"
+                    android:text="TITULO:" />
+
+                <TextView
+                    android:id="@+id/tv_name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_alignBottom="@+id/iv_movie_poster"
+                    android:layout_alignStart="@+id/textView4"
+                    android:layout_below="@+id/textView4"
+                    android:gravity="center"
+                    android:text="Captain America Civil War"
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
 
             </RelativeLayout>
+
             <TextView
-                android:id="@+id/tv_name"
+                android:id="@+id/textView3"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="0.2"
+                android:text="DESCRIPCION" />
+
+            <TextView
+                android:id="@+id/txt_descripcion"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight="0.2"
                 android:gravity="center"
+                android:text=" "
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:text="Captain America Civil War"
-                android:layout_weight=".8"/>
+                tools:text="des" />
+
             <TextView
                 android:id="@+id/key"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:layout_weight=".8"
                 android:gravity="center"
+                android:text=" "
                 android:textSize="18sp"
                 android:textStyle="bold"
-                android:text=" "
-                android:layout_weight=".8"/>
+                android:visibility="invisible"
+                tools:text="KEY" />
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
-
 
 
 </LinearLayout>
