--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorPrimary">#147967</color>
+    <color name="colorPrimaryDark">#147967</color>
+    <color name="colorAccent">#a92725</color>
     <color name="textPrimary">#212121</color>
     <color name="textSecondary">#727272</color>
-    <color name="white">#fff</color>
+    <color name="white">#120505</color>
     <color name="background">#dae2e2e2</color>
+    <color name="fondo">#dae2e2e2</color>
+
 
 </resources>
