--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -10,11 +10,11 @@
     <!--Defining colors for TextInputLayout's EditText-->
     <style name="TextLabel" parent="TextAppearance.AppCompat">
         <!-- Hint color and label color in FALSE state -->
-        <item name="android:textColorHint">#9575cd</item>
+        <item name="android:textColorHint">#3c3c3d</item>
         <item name="android:textSize">20sp</item>
         <!-- Label color in TRUE state and bar color FALSE and TRUE State -->
         <item name="colorAccent">@color/colorAccent</item>
-        <item name="colorControlNormal">#9575cd</item>
+        <item name="colorControlNormal">#353436</item>
         <item name="colorControlActivated">@color/colorAccent</item>
     </style>
 
