Rejected commit: hasta transportar a nueva actividad

--- a/app/src/main/res/layout/activity_nuevo.xml
+++ b/app/src/main/res/layout/activity_nuevo.xml
@@ -46,7 +46,18 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:ems="10"
-        android:inputType="textPersonName"
-        android:text="Name" />
+        android:inputType="textPersonName" />
+
+    <Button
+        android:id="@+id/btn_actualizar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Actualizar" />
+
+    <TextView
+        android:id="@+id/lbl_himportante"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="TextView" />
 
 </LinearLayout>
