--- a/app/src/main/res/layout/movie_board_item.xml
+++ b/app/src/main/res/layout/movie_board_item.xml
@@ -69,8 +69,7 @@
             <TextView
                 android:id="@+id/txt_descripcion"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_weight="0.2"
+                android:layout_height="44dp"
                 android:gravity="center"
                 android:text=" "
                 android:textSize="18sp"
@@ -80,16 +79,16 @@
             <TextView
                 android:id="@+id/textView2"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:text="Hecho importante :" />
+                android:layout_height="0dp"
+                android:text="Hecho importante :"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/txt_hecho"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_weight="0.2"
-                android:text="DESCRIPCION:" />
+                android:layout_height="5dp"
+                android:text="DESCRIPCION:"
+                android:visibility="invisible" />
 
             <TextView
                 android:id="@+id/key"
